add link to github profile in footer

--- a/public/index.html
+++ b/public/index.html
@@ -199,7 +199,7 @@
         </section>
           
         <section class="footer">
-          <p data-text="footer_notice"></p>
+          <a href="https://github.com/sebastianwachter"><p data-text="footer_notice"></p></a>
           <div class="tab" id="imprint">
             <p data-text="footer_imprint"></p>
           </div>
